change js to function better

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
   </head>
   <body>
+    <form>
+      <label>userId</label>
+      <input id="userId" type="number" min="1" max="10" />
+      <button onclick="userInput()">My ToDo</button>
+    </form>
     <button onclick="fetchTodos()">Fetch Todos</button>
     <button onclick="logTodos()">Log Todos</button>
     <button onclick="populateTodos()">Populate Todos</button>
